--- a/src/components/loginLogout/loginLogout.module.css
+++ b/src/components/loginLogout/loginLogout.module.css
@@ -1,25 +1,16 @@
-.Container{
+.LoginPelaBarra{
+    background-color: #EDEDED    ;
     width: 100%;
-    height: 50px;
-    min-width: 430px;
-    min-height: 80px;
-    background-color: #EDEDED;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.ContainerEntrarSairBotao{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20%;      
-    margin-right: 5px;
+    flex-direction: row;
+    height: 100px;
+    padding-top: 20px;
+    padding-bottom: 10px;
 }
 
-.botaoEntrarSair{
-    text-decoration: none;
-    color: #4088CB;
+.botaoLogin{
+    color: #1087ff;
     cursor: pointer;
 }
