--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -14,6 +14,7 @@
     justify-content: center;
     align-items: center;
     height: 160px;
+    margin-bottom: 50px;
 }
 
 .containerTextos{
@@ -39,6 +40,7 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     color: #000000;
+    font-weight:lighter;
 }
 
 .Containerformulario{
@@ -58,8 +60,9 @@
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height: 200px;
+    height: 100%;
     gap: 10px;
+    min-height: 300px;
 }
 
 .input{
