--- a/src/components/loginLogout/loginLogout.module.css
+++ b/src/components/loginLogout/loginLogout.module.css
@@ -1,6 +1,6 @@
 .LoginPelaBarra{
     background-color: #EDEDED    ;
-    width: 100%;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
