--- a/src/pages/comentarios/comentarios.module.css
+++ b/src/pages/comentarios/comentarios.module.css
@@ -67,3 +67,78 @@
 .texto{
     color: black;
 }
+
+.container{
+    width: 350px;
+    background-color: #FBFBFB;
+    min-height: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 2px;
+    margin-top: 10px;
+    border-radius: 10px;
+}
+
+.card{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    word-wrap: break-word;
+}
+
+.titulo{
+    color: #6F6F6F;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    font-size: 0.8rem;
+    width: 100%;
+}
+.textos{
+    color: black;
+    display: flex;
+    word-wrap: break-word;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+
+}
+
+.ContainerCurtidasComent{
+    display: flex;
+    flex-direction: row;
+    width: 200px;
+    height: 40px;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+}
+
+
+
+.containerlikesDeslikes{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    border-radius: 10px;
+    border: #E0E0E0 solid 2px;
+    gap: 10px;
+    cursor: pointer;
+}
+
+
+.imagemSetas{
+    width: 20px;
+    height: 20px;
+}
+
+.imagemSetas:hover{
+    border: blue;
+}
