--- a/src/pages/comentarios/comentarios.module.css
+++ b/src/pages/comentarios/comentarios.module.css
@@ -45,6 +45,14 @@
     margin-top: 20px;
 }
 
+.ContainerComentarios{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+
 .ContainerCard{
     width: 100%;
     height: 100%;
@@ -56,12 +64,14 @@
 
 .ContainerCard{
     width: 100%;
+    max-width: 350px;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #EDEDED;
+    border-radius: 10px;
 }
 
 .texto{
@@ -71,7 +81,7 @@
 .container{
     width: 350px;
     background-color: #FBFBFB;
-    min-height: 80px;
+    min-height: 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
