--- a/src/pages/comentarios/comentarios.module.css
+++ b/src/pages/comentarios/comentarios.module.css
@@ -60,6 +60,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 5px;
+
 }
 
 .ContainerCard{
@@ -80,7 +82,6 @@
 
 .container{
     width: 350px;
-    background-color: #FBFBFB;
     min-height: 30px;
     display: flex;
     flex-direction: column;
@@ -93,12 +94,16 @@
 
 .card{
     display: flex;
-    justify-content: left;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    flex-direction: column;
-    word-wrap: break-word;
+    color: black;
+    border-radius: 10px;
+    border: #E0E0E0 solid 2px;
+    gap: 10px;
+    cursor: pointer;
+    width: 100px;
+    height: 25px;
 }
 
 .titulo{
@@ -139,6 +144,7 @@
     color: black;
     border-radius: 10px;
     border: #E0E0E0 solid 2px;
+    background-color: #FBFBFB;
     gap: 10px;
     cursor: pointer;
 }
