--- a/src/pages/comentarios/comentarios.module.css
+++ b/src/pages/comentarios/comentarios.module.css
@@ -158,3 +158,11 @@
 .imagemSetas:hover{
     border: blue;
 }
+
+.likeActive{
+    background-color: #008CBA;
+}
+
+.deslikeActive{
+    background-color: #f44336;
+}
